mullvad-daemon/src/migrations/snapshots/mullvad_daemon__migrations__v16__test__invalid_shadowsocks_access_method-2.snap
---
source: mullvad-daemon/src/migrations/v16.rs
expression: "serde_json::to_string_pretty(&old_settings).unwrap()"
---
{
  "api_access_methods": {
    "custom": []
  }
}
